# OpenCV_Code_Space

./: CMakeLists.txt  README.md
src/: read_pic.cpp  test_open_camera.cpp  test_opencv.cpp
